--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack -p 7000",
     "build": "next build",
-    "start": "next start",
+    "start12": "next start",
     "lint": "next lint",
-    "db:generate": "prisma generate"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
